Bug 1341960 TextInputHandler shouldn't ignore InsertText() calls even if TextInputHandler has already dispatched keypress events and/or composition events for the key down but InsertText() is called again for inserting printable text r=m_kato a=gchang

Korean IME and some other simple IME may not use marked text at composing text.  Such IME modifies composing character with InsertText() with aReplacementRange.  Then, when
 user types new character, such IME may replace the previous character with a call of InsertText() with aReplacementRange and insert the next character with additional call of InsertText() without aReplacementRange.

In this case, InsertText() ignores the call when the native keydown event is already caused composition events.  However, we need to allow to dispatch keypress event for supporting to insert text even in such case.

This patch checks if inserting text is printable.  If it's not a printable character such as U+000A at pressing Enter, keeping current behavior.  Otherwise, dispatching keypress event instead.

MozReview-Commit-ID: 5NcCgXfvniO